--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,14 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^5.1.0
+  json_annotation: ^4.8.1
+  build_runner: ^2.2.0
+  json_serializable: ^6.6.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
