--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   json_annotation: ^4.8.1
   build_runner: ^2.2.0
   json_serializable: ^6.6.1
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
