--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   build_runner: ^2.2.0
   json_serializable: ^6.6.1
   http: ^1.1.0
+  retry: ^3.1.2
 
 dev_dependencies:
   flutter_test:
