--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   json_serializable: ^6.6.1
   http: ^1.1.0
   retry: ^3.1.2
+  dartz: ^0.10.1
+  connectivity_plus: ^5.0.1
 
 dev_dependencies:
   flutter_test:
