--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   retry: ^3.1.2
   dartz: ^0.10.1
   connectivity_plus: ^5.0.1
+  flutter_riverpod: ^2.4.4
 
 dev_dependencies:
   flutter_test:
